[gd_scene load_steps=2 format=3 uid="uid://diipowf8nx5ks"]

[ext_resource type="Script" path="res://Objects/PickableObject.gd" id="1_p74rh"]

[node name="PickableObject" type="RigidBody3D"]
script = ExtResource("1_p74rh")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]

[node name="Highligh" type="Node3D" parent="."]

[node name="MeshHighlight" type="MeshInstance3D" parent="Highligh"]

[node name="Area3D" type="Area3D" parent="." groups=["pickable_object"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Area3D" to="." method="_on_area_3d_area_exited"]
